core/codegen/tests/ui-fail-nightly/catch_type_errors.stderr
error[E0277]: the trait bound `usize: rocket::response::Responder<'_, '_>` is not satisfied
 --> $DIR/catch_type_errors.rs:6:30
  |
6 | fn f1(_request: &Request) -> usize {
  |                              ^^^^^ the trait `rocket::response::Responder<'_, '_>` is not implemented for `usize`
  |
  = note: required by `rocket::response::Responder::respond_to`

error[E0277]: the trait bound `bool: rocket::response::Responder<'_, '_>` is not satisfied
  --> $DIR/catch_type_errors.rs:12:30
   |
12 | fn f2(_request: &Request) -> bool {
   |                              ^^^^ the trait `rocket::response::Responder<'_, '_>` is not implemented for `bool`
   |
   = note: required by `rocket::response::Responder::respond_to`

error[E0308]: mismatched types
  --> $DIR/catch_type_errors.rs:18:7
   |
18 | fn f3(_request: bool) -> usize {
   |       ^^^^^^^^^^^^^^ expected `bool`, found `&rocket::Request<'_>`

error[E0277]: the trait bound `usize: rocket::response::Responder<'_, '_>` is not satisfied
  --> $DIR/catch_type_errors.rs:18:26
   |
18 | fn f3(_request: bool) -> usize {
   |                          ^^^^^ the trait `rocket::response::Responder<'_, '_>` is not implemented for `usize`
   |
   = note: required by `rocket::response::Responder::respond_to`

error[E0277]: the trait bound `usize: rocket::response::Responder<'_, '_>` is not satisfied
  --> $DIR/catch_type_errors.rs:25:12
   |
25 | fn f4() -> usize {
   |            ^^^^^ the trait `rocket::response::Responder<'_, '_>` is not implemented for `usize`
   |
   = note: required by `rocket::response::Responder::respond_to`
